# Robotics_2025

./: README.md  file1.txt
ijsjes_vision/: package.xml
ijsjes_vision/scripts/: vision_control.py  vision_publisher.py
src/ijsjes_hmi/: CMakeLists.txt  package.xml
src/ijsjes_hmi/scripts/: hmi_control.py
src/ijsjes_robot/: CMakeLists.txt  package.xml
src/ijsjes_robot/launch/: start_all.launch
src/ijsjes_robot/msg/: HmiToRobot.msg  IceTarget.msg  RobotToHmi.msg
src/ijsjes_robot/scripts/: delayed_gripper_start.sh  robot_control.py
src/ijsjes_vision/: CMakeLists.txt
src/ijsjes_vision/resources/: ultiemeijsjesdetectiesysteemv1iyolov5pytorch.json  ultiemeijsjesdetectiesysteemv1iyolov5pytorch.xml
src/ijsjes_vision/scripts/: vision_control.py  vision_publisher.py
