<?xml version="1.0"?>
<package format="2">
  <name>ijsjes_robot</name>
  <version>0.0.0</version>
  <description>The ijsjes_robot package</description>

  <maintainer email="student@todo.todo">student</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>moveit_commander</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>  
  <build_export_depend>message_runtime</build_export_depend>  
  <exec_depend>message_runtime</exec_depend>  
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
